x-maf_league/styles/main.css
/* Custom fonts */
@import url(../fonts/forte.TTF);

/* Body */
body {
    margin: 0px;
}

/* Header */
.header {
    background-color: black;
    text-align: center;
    border-bottom: solid 1px white;
}

.header img {
    width: 800px;
}
/* End Header */
/* Sub_menu */
.sub_header, .scedule_ordering {
    text-align: center;
}

.scedule_ordering ul {
    border: none;
    padding: 30px 0px;
}

.scedule_ordering a {
    color: white;
    font-size: 35px;
    margin: 0px 20px;
}

.scedule_ordering a:hover {
    color: aqua;
}

ul {
    list-style-type: none;
    margin: 0;
    overflow: hidden;
    background-color: black;
    border-bottom: 1px solid white;
    padding: 0px;
    font-size: 0px;
}

li {
    display: inline-block;
}

li a {
    display: block;
    color:cyan;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 20px;
    font-family: Forte;
}

.sub_header li a:hover {
    background-color: white;
    color: black;
}

a.active{
    border-bottom: solid 3px cyan;
    color: cyan;
}

.schedule_content {
    background-color: black;
    height: 100%;
    padding: 50px;
}

.schedule_content table {
    font-family: cursive;
    color: goldenrod;
    margin: 30px auto;
    font-size: 30px;
    text-align: center;
}

.schedule_content table a {
    color: goldenrod;
    text-decoration: none;
}

h2 {
    font-size: 60px;
    color: white;
    background-color: black;
    text-align: center;
    font-family: cursive;
    margin: 0px;
}

.schedule_content table td:nth-child(1) {
    min-width: 400px;
}

.old_date {
    display: none;
}

.old_date, .old_date a, .old_gray a:visited {
    color: goldenrod;
    text-decoration: none;
}

.touranment_place {
    font-size: 15px;
    margin: 0px;
}

.rating_content {
    background-color: black;
}

.rating_content table {
    color: white;
    margin: auto;
}

.rating_content td:nth-child(1) {
    min-width: 30px;
}

.rating_content td:nth-child(2) {
    min-width: 50px;
}

.rating_content td:nth-child(3) {
    min-width: 200px;
}

.rating_content tr {
    font-size: 20px;
    height: 50px;
}

.rating_content h2 {
    padding: 25px 0px 30px;
}

.rating_content table img {
    width: 40px;
    height: 40px;
    border-radius: 50%;
}

.full_table {
    text-align: center;
    margin-left: 30px;
}

.full_table a {
    border: solid 1px white;
    padding: 15px;
    text-align: center;
    font-size: 25px;
    text-decoration: none;
    color: white;
    width: 150px;
    margin: 40px auto 50px;
    display: inline-block;
}

